<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">evinansh_s_application4</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_thu">thu</string>
  <string name="lbl_height">Height</string>
  <string name="lbl_bath">Bath</string>
  <string name="lbl_65">65</string>
  <string name="lbl2">|</string>
  <string name="msg_senin_20_novem">Senin, 20 november 2023</string>
  <string name="lbl_description">Description</string>
  <string name="lbl_tulis_catatan">Tulis Catatan</string>
  <string name="lbl_5_5kg">5.5kg</string>
  <string name="msg_already_have_ac">Already have account? Login</string>
  <string name="lbl_phone_number">Phone Number</string>
  <string name="lbl_58_5cm">58.5cm</string>
  <string name="lbl_52">52</string>
  <string name="lbl_hands_to_mouth">Hands to mouth</string>
  <string name="lbl_50">50</string>
  <string name="lbl_catatan_harian">Catatan Harian</string>
  <string name="msg_forgot_password">Forgot password?</string>
  <string name="lbl_2_month_old">2 month old</string>
  <string name="msg_create_your_pas">Create your password</string>
  <string name="lbl_check_in_time">Check-in time</string>
  <string name="lbl_eat">Eat</string>
  <string name="lbl_wed">Wed</string>
  <string name="lbl_username">Username</string>
  <string name="lbl_edit_profile">Edit Profile</string>
  <string name="lbl_42">42</string>
  <string name="msg_made_at_theorem">Made at Theorem with love</string>
  <string name="lbl_5_07_15_28">5:07 / 15:28</string>
  <string name="lbl_sign_out">Sign Out</string>
  <string name="lbl_40">40</string>
  <string name="msg_don_t_have_acco">Don\u2019t have account? Sign Up</string>
  <string name="lbl_nama2">Nama </string>
  <string name="lbl_tue2">tue</string>
  <string name="lbl_video">Video</string>
  <string name="lbl_20_june">20
June</string>
  <string name="lbl_weight">Weight</string>
  <string name="lbl_mon2">mon</string>
  <string name="lbl_wed2">wed</string>
  <string name="msg_masukan_informa">Masukan Informasi Anak anda</string>
  <string name="lbl_judul">Judul</string>
  <string name="lbl_welcome">Welcome</string>
  <string name="lbl_30">30</string>
  <string name="msg_silahkan_masuka">Silahkan masukan informasi anak anda seperti Berat Badan, Tinggi Badan, Dll </string>
  <string name="lbl_kg">Kg</string>
  <string name="msg_welcome_to_my_p">Welcome to My Parent, your trusted partner for a safe and healthy pregnancy journey</string>
  <string name="lbl_35">35</string>
  <string name="lbl_password">Password</string>
  <string name="lbl_fri">fri</string>
  <string name="msg_rabu_22_novemb">Rabu, 22 november 2023</string>
  <string name="lbl_cm">Cm</string>
  <string name="lbl_syakila">Syakila</string>
  <string name="lbl_tanggal_lahir">Tanggal Lahir</string>
  <string name="msg_setiap_langkah"> "Setiap langkah kecil yang kamu ambil sebagai ibu adalah investasi besar untuk masa depan anak-anakmu. Teruslah melangkah, karena setiap usahamu berarti banyak."</string>
  <string name="lbl_mon">Mon</string>
  <string name="lbl_babble">Babble</string>
  <string name="lbl_tue">Tue</string>
  <string name="lbl_smilling">Smilling</string>
  <string name="lbl_jenis_kelamin">Jenis Kelamin</string>
  <string name="lbl_20">20</string>
  <string name="lbl_23">23</string>
  <string name="lbl_24">24</string>
  <string name="lbl_21">21</string>
  <string name="lbl_22">22</string>
  <string name="lbl_daily_activity">Daily Activity</string>
  <string name="lbl_berat_badan">Berat badan</string>
  <string name="lbl_enter_here">Enter here...</string>
  <string name="lbl_today">Today</string>
  <string name="lbl_e_mail">E Mail</string>
  <string name="lbl_10">10</string>
  <string name="lbl_sign_up">Sign Up</string>
  <string name="lbl_nama">Nama</string>
  <string name="lbl_daily_activity2">Daily activity</string>
  <string name="lbl_16">16</string>
  <string name="lbl_17">17</string>
  <string name="lbl_18">18</string>
  <string name="lbl_19">19</string>
  <string name="msg_sign_up_with_go">Sign up with Google</string>
  <string name="lbl">************</string>
  <string name="lbl_save">Save</string>
  <string name="lbl_80">80</string>
  <string name="lbl_search">Search</string>
  <string name="lbl_my_statistik">My Statistik</string>
  <string name="lbl_0">0</string>
  <string name="lbl_email_i_d">Email I\u2019d</string>
  <string name="lbl_8">8</string>
  <string name="lbl_202">20
</string>
  <string name="lbl_daily_challenge">Daily Challenge</string>
  <string name="lbl_profil">Profil</string>
  <string name="lbl_login">Login</string>
  <string name="lbl_sleep">Sleep</string>
  <string name="msg_procyon_gmail_c">Procyon@gmail.com</string>
  <string name="lbl_my_parent">My Parent</string>
  <string name="msg_enter_your_emai">Enter your email</string>
  <string name="msg_don_t_have_acco2">Don\u2019t have account? </string>
  <string name="lbl_procyon_13cd">Procyon@13cd</string>
  <string name="msg_daily_performan">Daily performance</string>
  <string name="lbl_today_habit">Today Habit</string>
  <string name="lbl_berat_tinggi">Berat &amp; tinggi</string>
  <string name="lbl_eye_contact">Eye Contact</string>
  <string name="lbl_or">OR</string>
  <string name="lbl_update">Update</string>
  <string name="lbl_statistic">Statistic</string>
  <string name="lbl_june">June</string>
  <string name="msg_already_have_ac2">Already have account? </string>
  <string name="msg_playing_with_fe">Playing with feet</string>
  <string name="lbl_diaper">Diaper</string>
  <string name="lbl_enter_your_name">Enter your name</string>
  <string name="lbl_tinggi_badan">Tinggi badan</string>
<string name="msg_please_enter_valid_pa">Please enter valid password</string>
<string name="msg_please_enter_valid_email">Please enter valid email</string>
</resources>
