<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="registerVM" type="com.evinanshsapplication.app.modules.register.data.viewmodel.RegisterVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearRegister"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_50">
        <ImageView android:id="@+id/imageLogoOne"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_149pxh"
            android:layout_marginEnd="@dimen/_37pxh"
            android:layout_marginStart="@dimen/_37pxh"
            android:layout_marginTop="@dimen/_46pxv"
            android:layout_width="@dimen/_150pxh"
            android:scaleType="fitXY" cornerRadius="@{@dimen/_20pxh}"
            imageRes="@{@drawable/img_logo1}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_logo1"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtEnteryourname"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_37pxh"
            android:layout_marginStart="@dimen/_37pxh"
            android:layout_marginTop="@dimen/_51pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{registerVM.registerModel.txtEnteryourname}"
            style="@style/txtPlusJakartaSansromanmedium14" tools:text="@string/lbl_enter_your_name"/>
        <androidx.appcompat.widget.SearchView
            android:background="@drawable/rectangle_bg_white_a700_border_bluegray_400_radius_10"
            android:gravity="center_horizontal"
            android:id="@+id/searchViewInput"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_37pxh"
            android:layout_marginStart="@dimen/_37pxh"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_width="match_parent"
            android:theme="@style/searchViewInput"
            app:iconifiedByDefault="false"
            app:queryBackground="@android:color/transparent"
            app:queryHint="@string/lbl_enter_here" app:searchIcon="@drawable/img_search"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtEnteryouremai"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_37pxh"
            android:layout_marginStart="@dimen/_37pxh"
            android:layout_marginTop="@dimen/_23pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{registerVM.registerModel.txtEnteryouremai}"
            style="@style/txtPlusJakartaSansromanmedium14" tools:text="@string/msg_enter_your_emai"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_pink_200_radius_10"
            android:drawableEnd="@drawable/img_vector"
            android:drawablePadding="@dimen/_30pxh"
            android:ellipsize="end"
            android:hint="@string/msg_procyon_gmail_c"
            android:id="@+id/etEmail"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_37pxh"
            android:layout_marginStart="@dimen/_37pxh"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_12pxv"
            android:paddingEnd="@dimen/_21pxh"
            android:paddingStart="@dimen/_20pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@={registerVM.registerModel.etEmailValue}"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtCreateyourpas"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_37pxh"
            android:layout_marginStart="@dimen/_37pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{registerVM.registerModel.txtCreateyourpas}"
            style="@style/txtPlusJakartaSansromanmedium14" tools:text="@string/msg_create_your_pas"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_bluegray_400_radius_10"
            android:drawableEnd="@drawable/img_group"
            android:drawablePadding="@dimen/_30pxh"
            android:ellipsize="end" android:hint="@string/lbl"
            android:id="@+id/etPassword"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_37pxh"
            android:layout_marginStart="@dimen/_37pxh"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_20pxh"
            android:paddingStart="@dimen/_20pxh"
            android:paddingTop="@dimen/_12pxv" android:singleLine="true"
            android:text="@={registerVM.registerModel.etPasswordValue}"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRoundedOutline_1" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtForgotpassword"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_38pxh"
            android:layout_marginStart="@dimen/_38pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{registerVM.registerModel.txtForgotpassword}"
            style="@style/txtInterregular10_2" tools:text="@string/msg_forgot_password"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnLogin"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_37pxh"
            android:layout_marginStart="@dimen/_37pxh"
            android:layout_marginTop="@dimen/_14pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_12pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_12pxv" android:singleLine="true"
            android:text="@string/lbl_login" android:textAllCaps="false"
            style="@style/btnSolidRounded" tools:text="@string/lbl_login"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtAlreadyhaveac"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_37pxh"
            android:layout_marginStart="@dimen/_37pxh"
            android:layout_marginTop="@dimen/_29pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{registerVM.registerModel.txtAlreadyhaveac}"
            style="@style/txtInterregular10_3" tools:text="@string/msg_already_have_ac"/>
        <TextView android:ellipsize="end" android:id="@+id/txtOR"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_37pxh"
            android:layout_marginStart="@dimen/_37pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{registerVM.registerModel.txtOR}"
            style="@style/txtInterregular10_3" tools:text="@string/lbl_or"/>
        <LinearLayout android:gravity="center_vertical"
            android:id="@+id/linearButtonContent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_97pxv"
            android:layout_marginEnd="@dimen/_37pxh"
            android:layout_marginStart="@dimen/_37pxh"
            android:layout_marginTop="@dimen/_22pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStylewhite_3">
            <ImageView android:id="@+id/imageLogo"
                android:layout_height="@dimen/_20pxh"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginStart="@dimen/_75pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="@dimen/_19pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_logo"
                tools:ignore="ContentDescription" tools:src="@drawable/img_logo"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtButtonText"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_75pxh"
                android:layout_marginStart="@dimen/_15pxh"
                android:layout_marginTop="@dimen/_13pxv"
                android:layout_weight="0.85" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{registerVM.registerModel.txtButtonText}"
                style="@style/txtPlusJakartaSansromanregular12" tools:text="@string/msg_sign_up_with_go"/>
        </LinearLayout>
    </LinearLayout>
</layout>
