<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="loginVM" type="com.evinanshsapplication.app.modules.login.data.viewmodel.LoginVM"/>
    </data>
    <LinearLayout android:gravity="start" android:id="@+id/linearLogin"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_50">
        <ImageView android:id="@+id/imageLogoOne"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_150pxh"
            android:layout_marginEnd="@dimen/_37pxh"
            android:layout_marginStart="@dimen/_37pxh"
            android:layout_marginTop="@dimen/_47pxv"
            android:layout_width="@dimen/_151pxh"
            android:scaleType="fitXY" cornerRadius="@{@dimen/_20pxh}"
            imageRes="@{@drawable/img_logo1}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_logo1"/>
        <TextView android:ellipsize="end" android:id="@+id/txtEMail"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_37pxh"
            android:layout_marginStart="@dimen/_37pxh"
            android:layout_marginTop="@dimen/_129pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{loginVM.loginModel.txtEMail}"
            style="@style/txtProductSansregular14" tools:text="@string/lbl_e_mail"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_bluegray_400_radius_10"
            android:drawableEnd="@drawable/img_vector"
            android:drawablePadding="@dimen/_30pxh"
            android:ellipsize="end"
            android:hint="@string/lbl_enter_here"
            android:id="@+id/etInput" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_37pxh"
            android:layout_marginStart="@dimen/_37pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_13pxv"
            android:paddingEnd="@dimen/_21pxh"
            android:paddingStart="@dimen/_20pxh"
            android:paddingTop="@dimen/_13pxv" android:singleLine="true"
            android:text="@={loginVM.loginModel.etInputValue}"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRoundedOutline_1" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end" android:id="@+id/txtPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_37pxh"
            android:layout_marginStart="@dimen/_37pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{loginVM.loginModel.txtPassword}"
            style="@style/txtProductSansregular14" tools:text="@string/lbl_password"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_bluegray_400_radius_10"
            android:drawableEnd="@drawable/img_vector_bluegray_400"
            android:drawablePadding="@dimen/_30pxh"
            android:ellipsize="end"
            android:hint="@string/lbl_procyon_13cd"
            android:id="@+id/etInputOne" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_37pxh"
            android:layout_marginStart="@dimen/_37pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_12pxv"
            android:paddingEnd="@dimen/_20pxh"
            android:paddingStart="@dimen/_20pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@={loginVM.loginModel.etInputOneValue}"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRoundedOutline_1" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtForgotpassword"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_38pxh"
            android:layout_marginStart="@dimen/_38pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{loginVM.loginModel.txtForgotpassword}"
            style="@style/txtInterregular10_2" tools:text="@string/msg_forgot_password"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnLogin"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_37pxh"
            android:layout_marginStart="@dimen/_37pxh"
            android:layout_marginTop="@dimen/_28pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_12pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_12pxv" android:singleLine="true"
            android:text="@string/lbl_login" android:textAllCaps="false"
            style="@style/btnSolidRounded_1" tools:text="@string/lbl_login"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtDonthaveacco"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_37pxh"
            android:layout_marginStart="@dimen/_37pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{loginVM.loginModel.txtDonthaveacco}"
            style="@style/txtInterregular10_3" tools:text="@string/msg_don_t_have_acco"/>
        <TextView android:ellipsize="end" android:id="@+id/txtOR"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_37pxh"
            android:layout_marginStart="@dimen/_37pxh"
            android:layout_marginTop="@dimen/_21pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{loginVM.loginModel.txtOR}"
            style="@style/txtInterregular10_3" tools:text="@string/lbl_or"/>
        <LinearLayout android:gravity="center_vertical"
            android:id="@+id/linearButtonContent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_102pxv"
            android:layout_marginEnd="@dimen/_37pxh"
            android:layout_marginStart="@dimen/_37pxh"
            android:layout_marginTop="@dimen/_22pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStylewhite_4">
            <ImageView android:id="@+id/imageLogo"
                android:layout_height="@dimen/_20pxh"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginStart="@dimen/_80pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="@dimen/_19pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_logo"
                tools:ignore="ContentDescription" tools:src="@drawable/img_logo"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtButtonText"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_80pxh"
                android:layout_marginStart="@dimen/_15pxh"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_weight="0.84" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{loginVM.loginModel.txtButtonText}"
                style="@style/txtProductSansregular12" tools:text="@string/msg_sign_up_with_go"/>
        </LinearLayout>
    </LinearLayout>
</layout>
